# neural-pairwise-regression

./: .gitignore  README.md  pyproject.toml
meta/: README.md
meta/paper/: paper.bib  paper.md
meta/presentation/: beamerthemeCustom.sty  slides.md
nepare/: data.py  inference.py  nn.py
notebooks/: demo.ipynb  nepare_asap.ipynb  polaris_adme.ipynb  polaris_asap.ipynb  polaris_chemprop_nepare.ipynb  taw_method.ipynb  taw_method_v2.ipynb
notebooks/polaris_asap/: hopt.py  main.ipynb
notebooks/polaris_asap/utils/: chemprop_wrappers.py  combined_embeddings.py  metrics.py  mordred_wrappers.py  splitting.py
